hphp/test/slow/closure/ctor.php.expectf
Fatal error: Class cannot extend Closure in %s on line 6
